gitops/backend-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: hope-medical
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - minikube

      containers:
        - name: backend
          image: hope-medical-backend:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 5000

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: hope-medical
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
